SIT-163 fixed svg z-index

--- a/src/app/modules/categories/components/categories-page/categories-page.component.scss
+++ b/src/app/modules/categories/components/categories-page/categories-page.component.scss
@@ -18,4 +18,5 @@
 
 .categories__card{
   margin: 15px 10px 15px 10px;
+  z-index: 3;
 }
