--- a/src/app/modules/user/components/user-page/user-page.component.scss
+++ b/src/app/modules/user/components/user-page/user-page.component.scss
@@ -1,3 +1,3 @@
 .wrapper__info {
-  background-color: #dadada;
+  background-color: #f9f9f9;
 }
