--- a/src/app/shared/modules/core/components/background/background-element/backgorund-element.component.scss
+++ b/src/app/shared/modules/core/components/background/background-element/backgorund-element.component.scss
@@ -9,7 +9,7 @@ path, line, circle, rect{
 
 svg{
   opacity: 0.35;
-  z-index:auto;
+  z-index:-1;
   position: fixed;
   top:var(--positionX);
   left:var(--positionY);
