--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,13 +4,11 @@
 
 *{
   box-sizing: border-box;
-  z-index: 3;
 }
 
 html, body {
   height: 100%;
   width:100%;
-
 }
 
 body {
